--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,18 @@
 {
   "name": "iot-dashboard-backend",
   "version": "1.0.0",
-  "description": "Backend for IoT Dashboard with SQLite",
+  "description": "Backend for IoT Dashboard",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "body-parser": "^1.20.2",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "csv-parse": "^5.5.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.0.2"
   }
 }
