--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,13 @@ services:
     ports:
       - "8099:80"
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     networks:
       - iot-network
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - VITE_API_URL=http://backend:3000
+      - VITE_API_URL=http://localhost:3001/api
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80"]
       interval: 30s
@@ -30,6 +29,7 @@ services:
       - "3001:3000"
     volumes:
       - db-data:/app/data
+      - ./uploads:/app/uploads
     networks:
       - iot-network
     restart: unless-stopped
