--- a/iot-dashboard/Dockerfile
+++ b/iot-dashboard/Dockerfile
@@ -5,15 +5,16 @@ WORKDIR /app
 # Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install dependencies with legacy peer deps
-RUN npm install --legacy-peer-deps
+# Install dependencies with legacy peer deps and clean npm cache
+RUN npm install --legacy-peer-deps && \
+    npm cache clean --force
 
 # Copy the rest of the application
 COPY . .
 
 # Set environment variables
 ENV NODE_ENV=production
-ENV VITE_API_URL=http://localhost:3001
+ENV VITE_API_URL=http://backend:3000/api
 
 # Build the application
 RUN npm run build
@@ -26,6 +27,10 @@ COPY --from=build /app/dist /usr/share/nginx/html
 
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Create uploads directory
+RUN mkdir -p /usr/share/nginx/html/uploads && \
+    chmod 777 /usr/share/nginx/html/uploads
 
 # Expose port
 EXPOSE 80
