--- a/iot-dashboard-streamlit/requirements.txt
+++ b/iot-dashboard-streamlit/requirements.txt
@@ -1,13 +1,17 @@
-streamlit==1.30.0
-pandas==2.1.0
-numpy==1.26.0
-plotly==5.18.0
-matplotlib==3.8.0
-watchdog==3.0.0
-openpyxl==3.1.2
-xlrd==2.0.1
-reportlab==4.0.5
-sqlalchemy==2.0.23
-streamlit-extras==0.3.5
-streamlit-plotly-events==0.0.6
-pillow==10.0.1 
+streamlit>=1.30.0
+pandas>=2.1.0
+numpy>=1.26.0
+plotly>=5.18.0
+matplotlib>=3.8.0
+watchdog>=3.0.0
+openpyxl>=3.1.2
+xlrd>=2.0.1
+reportlab>=4.0.5
+sqlalchemy>=2.0.23
+streamlit-extras>=0.3.5
+streamlit-plotly-events>=0.0.6
+pillow>=10.0.1
+python-dateutil>=2.9.0
+pytz>=2025.2
+tzdata>=2025.2
+tzlocal>=5.3.1 
