--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,53 @@ docker-compose.override.yml
 
 # Logs
 logs
-*.log 
+*.log
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+iot-env/
+
+# Streamlit
+.streamlit/secrets.toml
+
+# OS specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Application data
+uploads/
+*.csv
+!requirements*.txt 
