--- a/iot-dashboard-streamlit/.streamlit/config.toml
+++ b/iot-dashboard-streamlit/.streamlit/config.toml
@@ -6,9 +6,10 @@ textColor = "#262730"
 font = "sans serif"
 
 [server]
-enableCORS = true
-enableXsrfProtection = true
+enableCORS = false
+enableXsrfProtection = false
 maxUploadSize = 200
+allowIframeEmbedding = true
 
 [runner]
 fastReruns = true
@@ -18,7 +19,8 @@ magicEnabled = true
 gatherUsageStats = false
 
 [ui]
-hideTopBar = false
+hideTopBar = true
+hideSidebarNav = true
 
 [logger]
 level = "info" 
